# server-portfolio-rust

./: .gitignore  README.md
api/: Cargo.toml
api/migrations/2020-09-29-034337_add_posts/: up.sql
api/src/: errors.rs  handlers.rs  main.rs  models.rs  pagination.rs  schema.rs
