[package]
name = "api"
version = "0.1.0"
authors = ["we0mmm <fnchao@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.18", features = ["serde"] }
derive_more = "0.99.10"
diesel = { version = "1.4.5", features = ["mysql","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.5"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
actix-service = "1.0.6"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.8"
actix-rt = "1.1.1"